--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
