--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "prism-react-renderer": "^2.4.1",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
